<resources>
    <string name="app_name">Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first">动物介绍</string>
    <string name="rabbit">兔子</string>
    <string name="intro_rabbit">兔（Rabbit）是哺乳类兔形目兔科下属所有的属的总称。俗称兔子。生物学分类动物界脊索动物门 脊椎动物亚门 哺乳纲 兔形目。
兔具有管状长耳（耳长大于耳宽数倍），簇状短尾，比前肢长得多的强健后腿。共9属43种。以亚洲东部、南部、非洲和北美洲种类最多，少数种类分布于欧洲和南美洲，其中一些种类分布广泛或者被引入很多地区，而也有不少种分布非常局限。
</string>
    <string name="label_second">地标介绍</string>
    <string name="dFMZ">东方明珠</string>
    <string name="intro_dFMZ">东方明珠广播电视塔（The Oriental Pearl Radio  TV Tower）是上海的标志性文化景观之一，位于浦东新区陆家嘴，塔高约468米。该建筑于1991年7月兴建，1995年5月投入使用，承担上海6套无线电视发射业务，地区覆盖半径80公里。
东方明珠广播电视塔是国家首批AAAAA级旅游景区。塔内有太空舱、旋转餐厅、上海城市历史发展陈列馆等景观和设施，1995年被列入上海十大新景观之一。</string>
    <string name="label_third">名人介绍</string>
    <string name="jJK">防弹少年团 田柾国</string>
    <string name="intro_jJK">
        出       生	1997年9月1日 韩国釜山广域市
        国       籍	韩国
        人物信息	A型 | 处女座 | 178cm | 66kg
        经纪公司	BigHit Entertainment
        田柾国，1997年9月1日出生于韩国釜山广域市，韩国流行乐男歌手、舞者，男子演唱组合防弹少年团主唱、领舞、副rapper。2013年6月，随组合发行首张单曲专辑《2 COOL 4 SKOOL》，并在Mnet音乐节目《M! Countdown》中正式出道；9月，随组合推出首张迷你专辑《O!RUL8,2?》。
    </string>
    <string name="txt1">匆匆那年，青春不散场</string>
    <string name="txt2">我们一起回家看看</string>
    <string name="txt3">孤独的城市，你有同伴</string>
    <string name="txt4">我们一起逛吃逛吃</string>
    <string name="btn1_label">开启旅程</string>
    <string name="case1"> 1.西财校内：</string>
    <string name="case1_1">瞻仰先贤——献上鲜花</string>
    <string name="case1_2"> 参加素质拓展活动——回味往日默契</string>
    <string name="case1_3"> 桃园食府就餐</string>
    <string name="case1_4">探望大学老师</string>
    <string name="case2">2.校外集体活动：</string>
    <string name="case2_1">温江绿道——露营烧烤活动</string>
    <string name="case2_2">普罗斯泰酒店——棋牌</string>
    <string name="case2_3">清江黄牛肉——就餐</string>
    <string name="case2_4"> 钻石KTV——唱响《匆匆那年》</string>
    <string name="name">姓名</string>
    <string name="stuno">学号</string>
    <string name="email">邮箱</string>
    <string name="add">工作单位</string>
    <string name="com1">蚂蚁金融服务集团</string>
    <string name="com1_intro">招聘职位：蚂蚁金服-高级java研发工程师</string>
    <string name="com1_intro_1">(支付宝（杭州）信息技术有限公司)</string>
    <string name="time1">[2019-6-30]</string>
    <string name="com2">中国人寿财产保险股份有限公司</string>
    <string name="com2_intro">招聘职位: 中国人寿理财经理（银保部）</string>
    <string name="com2_intro_1">(四川省成都市青羊区)</string>
    <string name="time2">[2019-5-31]</string>
    <string name="com3">花旗银行</string>
    <string name="com3_intro">招聘职位：CitiGold Associate 贵宾银行专员</string>
    <string name="com3_intro_1">(四川省成都市）</string>
    <string name="time3">[2019-4-23]</string>
    <string name="com4">西安华为技术有限公司</string>
    <string name="com4_intro">招聘职位: 资深devops研发工程师</string>
    <string name="com4_intro_1">(成都郫都区华为技术有限公司)</string>
    <string name="time4">[2019-3-31]</string>
    <string name="com5">四川今日头条科技有限公司</string>
    <string name="com5_intro">招聘职位: 后台研发工程师</string>
    <string name="com5_intro_1">(成都武侯区OCG国际中心)</string>
    <string name="time5">[2019-3-2]</string>
    <string name="recentsrc">近期资源列表</string>
    <string name="more">查看更多</string>
</resources>
