<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Party4Activity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/p4title"
    />
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="方案: 西财温暖一日游"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="人数:  少于50人"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:background="#d14021" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:background="#d14021" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day 1"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/case1"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case1_1"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case1_2"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case1_3"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case1_4"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day 2"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/case2"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case2_1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case2_2"
            android:textSize="15sp" />
        <TextView
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/case2_3"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/case2_4"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>