<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompanyActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/job2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recentsrc"

        />
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#fcb018"
        android:layout_marginTop="3dp"
        />

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/com1"
            android:textColor="#000000"
            android:textStyle="bold"
        />
    <GridLayout
        android:columnCount="2"
        android:rowCount="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <ImageView
            android:layout_height="90dp"
            android:layout_width="90dp"
            android:src="@mipmap/ant"
            android:layout_marginRight="10dp"
            />
        <GridLayout
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
           >
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/com1_intro"
            />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="(支付宝（杭州）信息技术有限公司)"
                android:paddingLeft="35dp"
                />
        </GridLayout>
    </GridLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="end"
        android:text="[2019-6-30]"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#fcb018"

        />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/com2"
            android:textColor="#000000"
            android:textStyle="bold"
            />
        <GridLayout
            android:columnCount="2"
            android:rowCount="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <ImageView
                android:layout_height="90dp"
                android:layout_width="90dp"
                android:src="@mipmap/picc"
                android:layout_marginRight="10dp"
                />
        <GridLayout
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/com2_intro"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:paddingLeft="80dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="(四川省成都市青羊区)"
                />
        </GridLayout>
        </GridLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="end"
            android:text="[2019-6-30]"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#fcb018"

            />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/com3"
            android:textColor="#000000"
            />
        <GridLayout
            android:columnCount="2"
            android:rowCount="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <ImageView
                android:layout_height="90dp"
                android:layout_width="90dp"
                android:src="@mipmap/citi"
                android:layout_marginRight="10dp"
                />
        <GridLayout
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/com3_intro"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:paddingLeft="80dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="(四川省成都市）"
                />

        </GridLayout>
        </GridLayout>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="end"
                android:text="[2019-6-30]"
                />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:gravity="start"
        />
</LinearLayout>