<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:text="@string/label_second"
        android:id="@+id/textView"
        />
    <TextView
        android:id="@+id/funcTextView1"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#e70004ff"
        android:text="@string/dFMZ"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:paddingBottom="16dp"
            android:src="@mipmap/dfmz" />

        <TextView
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/intro_dFMZ"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_row="0"
            android:layout_column="1"
            />
    </LinearLayout>
</LinearLayout>