<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#757575"
    tools:context=".CardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="个人名片"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.swufe.kk.page.CircleImageView
        android:id="@+id/one"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_border"
        android:src="@mipmap/head2" />

<GridLayout
    android:layout_below="@id/one"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="11dp"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/inp1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:textSize="25sp" />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/stuno"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inp2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textSize="25sp"
        android:ems="10"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/inp3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="121dp"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inp4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textSize="25sp"
        />

</GridLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="保存"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>